docs: update links

--- a/docs/content/docs/1.getting-started/2.installation.md
+++ b/docs/content/docs/1.getting-started/2.installation.md
@@ -58,7 +58,7 @@ This configuration creates a default `content` collection that processes all Mar
 The `type: page` means there is a 1-to-1 relationship between content files and pages on your site.
 ::
 
-::note{to="/docs/usage/collections"}
+::note{to="/docs/collections/define"}
 Learn more in our **Collections guide**.
 ::
 
@@ -72,7 +72,7 @@ Create a `content/index.md` file in your project root directory:
 Here is some content.
 ```
 
-Read more about writing [Markdown pages](/docs/usage/markdown).
+Read more about writing [Markdown pages](/docs/files/markdown).
 
 ### Display your Page
 
