--- a/docs/content/docs/2.collections/1.collections.md
+++ b/docs/content/docs/2.collections/1.collections.md
@@ -116,7 +116,7 @@ type Collection = {
 }
 ```
 
-::note{to="/docs/usage/types"}
+::note{to="/docs/collections/types"}
 Learn more about collection types.
 ::
 
@@ -135,7 +135,7 @@ type CollectionSource = {
 }
 ```
 
-::note{to="/docs/usage/sources"}
+::note{to="/docs/collections/sources"}
 Learn more about collection sources.
 ::
 
