docs: more improvements

--- a/docs/content/docs/4.components/2.prose.md
+++ b/docs/content/docs/4.components/2.prose.md
@@ -2,19 +2,22 @@
 title: 'Prose Components'
 description: 'A list of Prose components.'
 links:
-  - label: 'Content Renderer'
-    icon: 'i-lucide-square-text'
-    to: '/components/content-renderer'
+  - label: 'Source'
+    icon: 'i-simple-icons-github'
+    size: sm
+    to: 'https://github.com/nuxt-modules/mdc/tree/main/src/runtime/components/prose'
 ---
 
-Prose component are replacements for HTML typography tags. Prose components provides simple way to customize content UI. To overwrite a prose component, create a component with the same name in your project `components/content/` directory (ex: `components/content/ProseA.vue`)
+Prose components are replacements for HTML typography tags. Prose components provide a simple way to customize content UI.
 
-Prose component are origianlly part of [`@nuxtjs/mdc`](https://github.com/nuxt-modules/mdc).
+To overwrite a prose component, create a component with the same name in your project `components/content/` directory (ex: `components/content/ProseA.vue`).
+
+::note
+Prose components are originally part of [`@nuxtjs/mdc`](https://github.com/nuxt-modules/mdc).
+::
 
 
 ## `ProseA`
-
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseA.vue)
 
 ::code-group
   ```md [Code]
@@ -28,8 +31,6 @@ Prose component are origianlly part of [`@nuxtjs/mdc`](https://github.com/nuxt-m
 
 ## `ProseBlockquote`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseBlockquote.vue)
-
 ::code-group
   ```md [Code]
   > Block quote
@@ -42,11 +43,9 @@ Prose component are origianlly part of [`@nuxtjs/mdc`](https://github.com/nuxt-m
 
 ## `ProsePre`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProsePre.vue)
-
 ::code-group
   ```md [Code]
-    ```js [file.js]{4-6,7} meta-info=val
+    ```js [file.js]{2} meta-info=val
     export default () => {
       console.log('Code block')
     }
@@ -54,7 +53,7 @@ Prose component are origianlly part of [`@nuxtjs/mdc`](https://github.com/nuxt-m
   ```
 
   ::preview-card{label="Preview"}
-  ```js [file.js]{4-6,7}
+  ```js [file.js]{2}
   export default () => {
     console.log('Code block')
   }
@@ -69,12 +68,12 @@ Component properties will be:
   code: "export default () => {\n    console.log('Code block')\n}"
   language: "js"
   filename: "file.js"
-  highlights: [4, 5, 6, 7]
+  highlights: [2]
   meta: "meta-info=val"
 }
 ```
 
-Check out the [highlight options](/get-started/configuration#highlight) for more about the syntax highlighting.
+Check out the [highlight options](/docs/getting-started/configuration#highlight) for more about the syntax highlighting.
 
 ::callout{type="warning"}
 If you want to use `]` in the filename, you need to escape it with 2 backslashes: `\\]`. This is necessary since JS will automatically escape the backslash in a string so `\]` will be resolved as `]` breaking our regex.
@@ -82,19 +81,15 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 
 ## `ProseCode`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseCode.vue)
-
-`code`.
-
 ::code-group
   ```md [Code]
-  `code`.
+  `code`
 
   `const code: string = 'highlighted code inline'`{lang="ts"}
   ```
 
   ::preview-card{label="Preview"}
-  `code`.
+  `code`
 
   `const code: string = 'highlighted code inline'`{lang="ts"}
   ::
@@ -102,21 +97,17 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 
 ## `ProseH1`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseH1.vue)
-
 ::code-group
   ```md [Code]
   # H1 Heading
   ```
 
-  ::preview-card{label="Preview"}
+  ::preview-card{label="Preview" class="pt-4"}
   # H1 Heading
   ::
 ::
 
 ## `ProseH2`
-
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseH2.vue)
 
 ::code-group
   ```md [Code]
@@ -130,8 +121,6 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 
 ## `ProseH3`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseH3.vue)
-
 ::code-group
   ```md [Code]
   ### H3 Heading
@@ -143,8 +132,6 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ::
 
 ## `ProseH4`
-
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseH4.vue)
 
 ::code-group
   ```md [Code]
@@ -158,8 +145,6 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 
 ## `ProseH5`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseH5.vue)
-
 ::code-group
   ```md [Code]
   ##### H5 Heading
@@ -172,8 +157,6 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 
 ## `ProseH6`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseH6.vue)
-
 ::code-group
   ```md [Code]
   ###### H6 Heading
@@ -185,8 +168,6 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ::
 
 ## `ProseHr`
-
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseHr.vue)
 
 ::code-group
   ```md [Code]
@@ -208,8 +189,6 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 
 ## `ProseImg`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseImg.vue)
-
 ::code-group
   ```md [Code]
   ![A Cool Image](https://nuxt.com/assets/design-kit/icon-green.png)
@@ -221,8 +200,6 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ::
 
 ## `ProseUl`
-
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseUl.vue)
 
 ::code-group
   ```md [Code]
@@ -242,8 +219,6 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 
 ## `ProseLi`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseLi.vue)
-
 ::code-group
   ```md [Code]
   - List element
@@ -255,8 +230,6 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ::
 
 ## `ProseOl`
-
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseOl.vue)
 
 ::code-group
   ```md [Code]
@@ -274,8 +247,6 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 
 ## `ProseP`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseP.vue)
-
 ::code-group
   ```md [Code]
   Just a paragraph.
@@ -287,8 +258,6 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ::
 
 ## `ProseStrong`
-
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseStrong.vue)
 
 ::code-group
   ```md [Code]
@@ -302,8 +271,6 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 
 ## `ProseEm`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseEm.vue)
-
 ::code-group
   ```md [Code]
   _Just an italic paragraph._
@@ -315,8 +282,6 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 ::
 
 ## `ProseTable`
-
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseTable.vue)
 
 ::code-group
   ```md [Code]
@@ -338,30 +303,24 @@ If you want to use `]` in the filename, you need to escape it with 2 backslashes
 
 ## `ProseTbody`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseTbody.vue)
-
 Included in **ProseTable** example.
 
 ## `ProseTd`
-
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseTd.vue)
 
 Included in **ProseTable** example.
 
 ## `ProseTh`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseTh.vue)
-
 Included in **ProseTable** example.
 
 ## `ProseThead`
-
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseThead.vue)
 
 Included in **ProseTable** example.
 
 ## `ProseTr`
 
-[:icon{name="fa-brands:github" class="inline -mt-1 w-6"} Source](https://github.com/nuxt-modules/mdc/blob/main/src/runtime/components/prose/ProseTr.vue)
-
 Included in **ProseTable** example.
+
+::callout{icon="i-simple-icons-github" to="https://github.com/nuxt-modules/mdc/tree/main/src/runtime/components/prose"}
+Checkout the source code for these components on GitHub.
+::
