docs: update broken links

--- a/docs/content/docs/2.collections/1.collections.md
+++ b/docs/content/docs/2.collections/1.collections.md
@@ -95,7 +95,7 @@ const { data: posts } = await useAsyncData('blog', () => queryCollection('blog')
 </template>
 ```
 
-::note{to="/api/query-collection"}
+::note{to="/docs/utils/query-collection"}
 Learn more about the available query options in our `queryCollections` API documentation.
 ::
 
