--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -89,7 +89,7 @@ description: 'meta description of the page'
 | ------------------------------------------- | :-------: | ------------------------------------- | -------------------------------------------------------------------------------------------------------- |
 | `title`                                     | `string`  | First `<h1>`{lang="html"} of the page | Title of the page, will also be injected in metas                                                        |
 | `description`                               | `string`  | First `<p>`{lang="html"} of the page  | Description of the page, will be shown below the title and injected into the metas                       |
-| `navigation`                                | `boolean` | `true`                                | Define if the page is included in [`queryCollectionNavigation`](/docs/usage/navigation) return value. |
+| `navigation`                                | `boolean` | `true`                                | Define if the page is included in [`queryCollectionNavigation`](/docs/utils/query-collection-navigation) return value. |
 
 
 ## Excerpt
@@ -131,7 +131,7 @@ Code highlighting works both on [`ProsePre`](/docs/components/prose#prosepre) an
 Each line of a code block gets its line number in the `line` attribute so lines can be labeled or individually styled.
 
 ::callout
-[Read the API reference to configure or entirely disable syntax highlighting.](/get-started/configuration)
+[Read the API reference to configure or entirely disable syntax highlighting.](/docs/getting-started/configuration)
 ::
 
 ## Images
@@ -473,7 +473,7 @@ Code highlighting works both on [`ProsePre`](/docs/components/prose#prosepre) an
 Each line of a code block gets its line number in the `line` attribute so lines can be labeled or individually styled.
 
 ::callout
-[Read the API reference to configure or entirely disable syntax highlighting.](/get-started/configuration)
+[Read the API reference to configure or entirely disable syntax highlighting.](/docs/getting-started/configuration)
 ::
 
 ### Images
