--- a/docs/content/docs/3.utils/2.query-collection-navigation.md
+++ b/docs/content/docs/3.utils/2.query-collection-navigation.md
@@ -34,4 +34,4 @@ Generate a navigation tree for the specified collection.
 
 - Returns: A Promise that resolves to a navigation tree structure.
 
-The navigation tree is generated based on the directory structure and ordering happens based on files [ordering](/docs/getting-started/contents#ordering)
+The navigation tree is generated based on the directory structure and ordering happens based on files [ordering](/docs/collections/types#ordering-files)
