docs: improve markdown content

--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -1,9 +1,11 @@
 ---
 title: Markdown
-description: "Nuxt Content uses the Markdown syntax and conventions to provide a rich-text editing experience."
+description: "Create and query Markdown files in your Nuxt applications and use the MDC syntax to integrate Vue components."
 ---
 
-## Define Collection
+## Usage
+
+### Define a Collection
 
 ```ts [content.config.ts]
 export const collections = {
@@ -17,7 +19,11 @@ export const collections = {
 }
 ```
 
-## Create `.md` files
+::note{to="/docs/collections/types#page-type"}
+Learn more about the `page` collection type.
+::
+
+### Create `.md` files
 
 Create blog posts in `content/blog/` directory.
 
@@ -26,8 +32,10 @@ Create blog posts in `content/blog/` directory.
 ---
 date: 2020-11-11
 ---
-Hello,
-This is Foo here.
+
+# Foo
+
+This is Foo blog post.
 ```
 
 
@@ -40,28 +48,38 @@ I am bar. Nice to meet you.
 ```
 ::
 
-## Query Data
+### Query Markdown Files
 
 Now we can query blog posts:
 
 ```ts
-// Find a foo post
-const fooPost = await queryCollection('blog')
-  .path('/foo')
-  .first()
+// Get the foo post
+const fooPost = await queryCollection('blog').path('/foo').first()
 
-// Get all posts
-const allPosts = await queryCollection('blog')
-  .order('date', 'DESC')
-  .all()
+// Find all posts
+const allPosts = await queryCollection('blog').order('date', 'DESC').all()
 ```
 
-## MDC Syntax
+### Display Markdown
 
-We created the MDC syntax to supercharge Markdown and give you the ability to integrate Vue components with slots and props inside your Markdown.
+To display the content of a markdown file, you can use the [`<ContentRenderer>`](/docs/components/content-renderer) component.
 
-::callout
-Install the [MDC VS Code extension](https://marketplace.visualstudio.com/items?itemName=Nuxt.mdc) to get proper syntax highlighting for your MDC components.
+```vue [blog/[slug\\].vue]
+<script setup>
+const slug = useRoute().params.slug
+const { data: post } = await useAsyncData(`blog-${slug}`, () => {
+  return queryCollection('blog').path(slug).first()
+})
+</script>
+
+<template>
+  <!-- Render the blog post as Prose & Vue components -->
+  <ContentRenderer :value="post" />
+</template>
+```
+
+::note
+Read more about the [`<ContentRenderer>`](/docs/components/content-renderer) component and [`Prose Components`](/docs/components/prose).
 ::
 
 ## Front-matter
@@ -83,6 +101,17 @@ description: 'meta description of the page'
 <!-- Content of the page -->
 ```
 
+```ts [example.ts]
+const home = await queryCollection('content').path('/').first()
+
+console.log(home.title)
+// => 'Title of the page'
+console.log(home.description)
+// => 'meta description of the page'
+console.log(home.body)
+// => AST object of the page content
+```
+
 ### Native parameters
 
 | Key                                         |   Type    | Default                               | Description                                                                                              |
@@ -91,67 +120,13 @@ description: 'meta description of the page'
 | `description`                               | `string`  | First `<p>`{lang="html"} of the page  | Description of the page, will be shown below the title and injected into the metas                       |
 | `navigation`                                | `boolean` | `true`                                | Define if the page is included in [`queryCollectionNavigation`](/docs/utils/query-collection-navigation) return value. |
 
+## MDC Syntax
 
-## Excerpt
+We created the MDC syntax to supercharge Markdown and give you the ability to integrate Vue components with slots and props inside your Markdown.
 
-Content excerpt or summary can be extracted from the content using `<!--more-->` as a divider.
-
-```md [content/index.md]
----
-title: Introduction
----
-
-Learn how to use `@nuxt/content`.
-
-<!--more-->
-
-Full amount of content beyond the more divider.
-```
-
-Description property will contain the excerpt content unless defined within the Front Matter props.
-
-If there is no `<!--more-->` divider in the text then excerpt is undefined.
-
-Example variables will be injected into the document:
-
-```json
-{
-  "excerpt": Object
-  "body": Object
-  // ... other keys
-}
-```
-
-## Code Highlighting
-
-Nuxt Content uses [Shiki](https://github.com/shikijs/shiki), that colors tokens with VSCode themes.
-
-Code highlighting works both on [`ProsePre`](/docs/components/prose#prosepre) and [`ProseCode`](/docs/components/prose#prosecodeinline).
-
-Each line of a code block gets its line number in the `line` attribute so lines can be labeled or individually styled.
-
-::callout
-[Read the API reference to configure or entirely disable syntax highlighting.](/docs/getting-started/configuration)
+::callout{icon="i-simple-icons-visualstudiocode" to="https://marketplace.visualstudio.com/items?itemName=Nuxt.mdc"}
+Install the **MDC VS Code extension** to get proper syntax highlighting for the MDC syntax.
 ::
-
-## Images
-
-You can add images to your `public` directory:
-
-```bash [Directory structure]
-content/
-  index.md
-public/
-  image.png
-nuxt.config.ts
-package.json
-```
-
-And then use them in your markdown files in the `content` directory as such:
-
-```md [content/index.md]
-![my image](/image.png)
-```
 
 ## Vue Components
 
@@ -551,3 +526,64 @@ If you want to customize a Prose component, here are the recommended steps:
 ::note{to="/docs/components/prose"}
 Read the complete Prose reference in the Prose Components section.
 ::
+
+## Code Highlighting
+
+Nuxt Content uses [Shiki](https://github.com/shikijs/shiki), that colors tokens with VSCode themes.
+
+Code highlighting works both on [`ProsePre`](/docs/components/prose#prosepre) and [`ProseCode`](/docs/components/prose#prosecodeinline).
+
+Each line of a code block gets its line number in the `line` attribute so lines can be labeled or individually styled.
+
+::callout
+[Read the API reference to configure or entirely disable syntax highlighting.](/docs/getting-started/configuration)
+::
+
+## Images
+
+You can add images to your `public` directory:
+
+```bash [Directory structure]
+content/
+  index.md
+public/
+  image.png
+nuxt.config.ts
+package.json
+```
+
+And then use them in your markdown files in the `content` directory as such:
+
+```md [content/index.md]
+![my image](/image.png)
+```
+
+## Excerpt
+
+Content excerpt or summary can be extracted from the content using `<!--more-->` as a divider.
+
+```md [content/index.md]
+---
+title: Introduction
+---
+
+Learn how to use `@nuxt/content`.
+
+<!--more-->
+
+Full amount of content beyond the more divider.
+```
+
+Description property will contain the excerpt content unless defined within the Front Matter props.
+
+If there is no `<!--more-->` divider in the text then excerpt is undefined.
+
+Example variables will be injected into the document:
+
+```json
+{
+  "excerpt": Object
+  "body": Object
+  // ... other keys
+}
+```
