--- a/docs/content/docs/3.utils/1.query-collection.md
+++ b/docs/content/docs/3.utils/1.query-collection.md
@@ -3,15 +3,13 @@ title: queryCollection
 description: 'The queryCollection composable provides methods for querying and fetching your collections.'
 ---
 
-## Type
-
-```ts
-function queryCollection<T extends keyof Collections>(collection: T): CollectionQueryBuilder<Collections[T]>
-```
-
 ## Usage
 
-Use the auto-imported `queryCollection` to find contents inside a collection.Here we assume that you havr defined `docs` collection inside `content.config.ts`. If you have not defined any collection, check [How to define a collection](/docs/collections/collections#defining-collections).
+Use the auto-imported `queryCollection` to find contents inside a collection.Here we assume that you havr defined `docs` collection inside `content.config.ts`.
+
+::note
+If you have not defined any collection, check [How to define a collection](/docs/collections/collections#defining-collections).
+::
 
 ```vue [pages/[...slug\\].vue]
 <script>
@@ -23,6 +21,13 @@ const { data: page } = await useAsyncData(route.path, () => {
 ```
 
 ## API
+
+### Type
+
+```ts
+function queryCollection<T extends keyof Collections>(collection: T): CollectionQueryBuilder<Collections[T]>
+```
+
 
 ### `queryCollection(collection: CollectionName)`
 
