docs: update code samples

--- a/docs/content/docs/3.utils/1.query-collection.md
+++ b/docs/content/docs/3.utils/1.query-collection.md
@@ -183,7 +183,7 @@ Here is a complete example of how to fetch list of documents in `docs` collectio
 ```vue [index.vue]
 <script setup lang="ts">
 const { data: docs } = await useAsyncData('documents-list', () => {
-  return queryContent('docs')
+  return queryCollection('docs')
     .order('date', 'DESC')
     .select('title', 'path', 'description')
     .all()
