--- a/docs/content/docs/2.collections/1.collections.md
+++ b/docs/content/docs/2.collections/1.collections.md
@@ -3,9 +3,9 @@ title: Define
 description: 'Learn how to define and configure content collections in your Nuxt application.'
 ---
 
-The Nuxt Content module automatically parses any content files within the `content` directory located at the root of your Nuxt application. This setup allows you to freely structure the folder to suit your project's needs. 
+The Nuxt Content module automatically parses any content files within the `content/` directory located at the root of your Nuxt application. This setup allows you to freely structure the folder to suit your project's needs. 
 
-For a better organization, consider using Content Collections, which let you categorize and manage content more effectively. These collections are defined in a `content.config.ts` file.
+For better organization, consider using Content Collections, which let you categorize and manage content more effectively. These collections are defined in a `content.config.ts` file.
 
 ::warning
 If no `content.config.ts` file is present, all files within the content folder are parsed and imported by default. However, once a config file is added, only files matching the specified path patterns defined in collections will be imported.
@@ -53,8 +53,8 @@ On top of the [built-in fields](#built-in-fields), you can define a schema by ad
 import { defineCollection, z } from '@nuxt/content'
 
 export const collections = {
-  docs: defineCollection({
-    source: '**.md',
+  blog: defineCollection({
+    source: 'blog/**.md',
     type: 'page',
     // Define custom schema for docs collection
     schema: z.object({
