docs: various improvements

--- a/docs/content/docs/1.getting-started/3.configuration.md
+++ b/docs/content/docs/1.getting-started/3.configuration.md
@@ -73,9 +73,9 @@ export default defineNuxtConfig({
 })
 ```
 
-### `LibSQL` / `Turso`
+### `LibSQL`
 
-If you plan to deploy your application using LibSQL/Turso database you need to use `libsql` database adapter. 
+If you plan to deploy your application using LibSQL database you need to use `libsql` database adapter. 
 
 First, make sure to install the `@libsql/client` package:
 
@@ -96,6 +96,10 @@ export default defineNuxtConfig({
   }
 })
 ```
+
+::note
+The most popular LibSQL hosting services is [Turso](https://turso.tech/).
+::
 
 ## `build`
 
