--- a/docs/content/docs/2.collections/1.collections.md
+++ b/docs/content/docs/2.collections/1.collections.md
@@ -54,7 +54,7 @@ import { defineCollection, z } from '@nuxt/content'
 
 export const collections = {
   blog: defineCollection({
-    source: 'blog/**.md',
+    source: 'blog/*.md',
     type: 'page',
     // Define custom schema for docs collection
     schema: z.object({
