--- a/docs/content/docs/2.collections/2.types.md
+++ b/docs/content/docs/2.collections/2.types.md
@@ -16,7 +16,7 @@ For both types, built-in fields are generated. Every collection includes these d
 
 ```ts
 defineCollection({
-  source: '**.md',
+  source: '**/*.md',
   type: 'page'
 })
 ```
