--- a/docs/content/docs/2.collections/1.collections.md
+++ b/docs/content/docs/2.collections/1.collections.md
@@ -1,5 +1,7 @@
 ---
-title: Define
+title: Define Content Collections
+navigation:
+  title: Define
 description: 'Learn how to define and configure content collections in your Nuxt application.'
 ---
 
