--- a/docs/content/docs/2.collections/2.types.md
+++ b/docs/content/docs/2.collections/2.types.md
@@ -1,5 +1,7 @@
 ---
-title: Types
+title: Collection Types
+navigation:
+  title: Types
 description: Learn about the two types of collections you can define in Nuxt Content.
 ---
 
