docs: Update 1.collections.md file fixing z.Date typo

--- a/docs/content/docs/2.collections/1.collections.md
+++ b/docs/content/docs/2.collections/1.collections.md
@@ -62,7 +62,7 @@ export const collections = {
     schema: z.object({
       tags: z.array(z.string()),
       image: z.string(),
-      date: z.Date()
+      date: z.date()
     })
   })
 }
