chore: fixed the smallest typo ever
A small typo on the `queryCollection` section.

--- a/docs/content/docs/3.utils/1.query-collection.md
+++ b/docs/content/docs/3.utils/1.query-collection.md
@@ -46,7 +46,7 @@ Search for contents that have specific `path`. (`path` is an special field in `p
 ```ts
 const route = useRoute()
 const { data } = await useAsyncData(route.path, () => {
-  return queryCollection('docs').path(rotue.path).first()
+  return queryCollection('docs').path(route.path).first()
 })
 ```
 
