--- a/docs/content/docs/3.utils/1.query-collection.md
+++ b/docs/content/docs/3.utils/1.query-collection.md
@@ -118,7 +118,7 @@ const { data } = await useAsyncData(route.path, () => {
 })
 ```
 
-### `where(field: keyof Colleciton, operator: SqlOperator, value?: unkown)`
+### `where(field: keyof Collection, operator: SqlOperator, value?: unkown)`
 
 Add a condition to the query to filter results based on a specific field.
 
@@ -192,7 +192,7 @@ const { data: docs } = await useAsyncData('documents-list', () => {
 
 <template>
   <NuxtLink v-for="doc in docs" :key="doc.path" :to="doc.path">
-    <h2>{{ doc.title }}</div>
+    <h2>{{ doc.title }}</h2>
     <p>{{ doc.description }}</p>
   </NuxtLink>
 </template>
