docs: update markdown page

--- a/docs/content/docs/3.files/1.markdown.md
+++ b/docs/content/docs/3.files/1.markdown.md
@@ -411,56 +411,7 @@ In addition to mdc components and `span`, attribute syntax will work on images, 
   ::
 ::
 
-### Excerpt
-
-Content excerpt or summary can be extracted from the content using `<!--more-->` as a divider.
-
-```md
----
-title: Introduction
----
-
-Learn how to use @nuxt/content.
-<!--more-->
-Full amount of content beyond the more divider.
-```
-
-Description property will contain the excerpt content unless defined within the Front Matter props.
-
-If there is no `<!--more-->` divider in the text then excerpt is undefined.
-
-Example variables will be injected into the document:
-
-```json
-{
-  "excerpt": Object
-  "body": Object
-  // ... other keys
-}
-```
-
-### Images
-
-You can add images to your `public` directory:
-
-```
-content/
-  index.md
-public/
-  img/
-    image.png
-nuxt.config.ts
-package.json
-tsconfig.json
-```
-
-And then use them in your markdown files in the `content` directory as such:
-
-```md [content/index.md]
-![my image](/img/image.png)
-```
-
-### Binding Data in Markdown
+## Binding Data in Markdown
 
 You can bind data within your Markdown document using the `{{ $doc.variable || 'defaultValue' }}` syntax. These values can be defined in the YAML front matter at the top of the document, within each MDC component, or injected using the `data` prop of the `<ContentRenderer>` component.
 
