docs(studio): create section

--- a/docs/content/docs/7.studio/1.setup.md
+++ b/docs/content/docs/7.studio/1.setup.md
@@ -1,53 +1,50 @@
 ---
-title: Introduction and setup of Nuxt Studio - the visual CMS platform of Nuxt Content
+title: Setup Nuxt Studio
+seo:
+  title: Introduction and setup of Nuxt Studio - the visual CMS platform of Nuxt Content
+  description: Studio is a the Git-based CMS platform for Nuxt Content websites, providing an intuitive interface to edit your Markdown, YAML and JSON files and publish your changes to GitHub.
 navigation:
-  title: Introduction
-description: Studio is a the Git-based CMS platform for Nuxt Content websites, providing an intuitive interface to edit your Markdown, YAML and JSON files and publish your changes to GitHub.
+  title: Setup
+description: Studio is the intuitive interface to edit Nuxt Content websites. Edit your Markdown, YAML and JSON files and publish your changes to GitHub.
 ---
 
-![No projects found page](/assets/docs/get-started/GetStartedSetup.webp)
+Studio is a Nuxt Content plugin you can activate to use the visual CMS platform.
 
-Studio can be considered as the Pro version of **Nuxt Content**. It's the visual CMS platform of Nuxt Content optimized for website based on it.
-
-## Our credo
-
-Most CMS solutions have to choose between being very customizable for developers or highly user friendly for content editors, with Studio we want to do both.
-
-### Intuitive
-
-Content editors can benefit from a user-friendly interface including, among other things, an editor similar to Notion to edit their website content.
-
-### Customizable
+Content editors can benefit from a user-friendly interface including, among other things, editors to edit their `Markdown`, `YAML` or `JSON` files. 
 
 Developers can customize the edition experience and provide tools to the editor who can focus on content without requiring any technical expertise.
 
+:video{autoplay controls loop poster="/assets/home/videos/HomeNotionLikePoster.webp" src="https://res.cloudinary.com/nuxt/video/upload/v1729157955/frontmatterform2_rmh58v.mp4"}
+
 ## Authentication
 
-The Studio admin is located on [studio.content.nuxt.com], from there you can either login with GitHub or with Google. Both methods give you the same edition rights but since Studio is [synchronized with GitHub](/docs/studio/github), some features are specific to GitHub users, especially project creation (synchronized with a GitHub repository).
+The Studio admin is located on [studio.content.nuxt.com](https//studio.content.nuxt.com). From there you can either login with GitHub or with Google. Both methods give you the same edition rights but since Studio is [synchronized with GitHub](/docs/studio/github), the repository import must be handled by a GitHub user.
 
-::callout{color="orange" icon="i-ph-warning"}
+::warning
 Google authentication is adapted for non technical users. Google users have to join a team with existing projects to edit them.
 ::
 
-## Create your project
+## Connect your Nuxt Content repository
 
-Once you are logged in the admin, you have the possibility to create a project from the interface.
+Once you are logged in the admin, you have the possibility to import your Nuxt Content repository from the interface.
 
-Two options are available, you can either start from an [existing repository](/docs/projects/create) or use one of our [templates](/docs/projects/create).
+::tip
+Two options are available, you can either import an existing repository or use one of our [templates](/studio/templates).
+::
 
-The only requirement at that point is to connect to our [GitHub app](/docs/studio/github), you'll be then able to link a GitHub repository to your project.
+The only requirement is to host your repository on GitHub. From the interface, connect to our [GitHub app](/docs/studio/github), you'll be then able to link a GitHub repository to your Studio project.
 
-Once the project is created, you can start editing your files with the Studio editor and publish your changes.
+Once the project is created, you can start editing your files with the Studio editors and publish your changes.
 
 ## Enable the live preview
 
 Once created, your project URL must be set to enjoy all Studio features, especially the live preview of your website.
 
 ::tip
-We are proposing a GitHub Pages deployment. With it we will handle all the requirements for you. However, if you want to use the deployment platform of your choice, please follow the guidelines below.
+We are proposing a GitHub Pages deployment. By using it, we will handle all the requirements for you. However, if you want to use the deployment platform of your choice, please follow the simple guideline below.
 ::
 
-To enable the live preview, you just need to activate studio in the content confiuration of `nuxt.config.ts` file.
+To enable the live preview, you just need to activate studio in the content configuration of your fv`nuxt.config.ts` file.
 
 ```ts [nuxt.config.ts]
 export default defineNuxtConfig({
@@ -59,7 +56,7 @@ export default defineNuxtConfig({
 })
 ```
 
-Once deployed, you can ensure Studio has been activated by navigating to the `/__studio.json` page on your site. This metadata page is automatically generated by the Studio module and must be accessible to connect your URL in the self-hosted section of Nuxt Studio.
+Once deployed, you can ensure Studio has been activated by navigating to the `/__studio.json` page on your site. This metadata page is automatically generated by the Content module and must be accessible to connect your URL in the self-hosted section of Studio.
 
 ### Troubleshooting
 
@@ -75,7 +72,7 @@ The `__studio.json` file is generated but you encounter a `Forbidden error: inva
 },
 ```
 
-::caution
+::warning
 This information should be populated automatically in most cases. We support most popular providers (Vercel, Netlify, etc.), but if you're using a non supported provider or a custom one, it may not be fetched correctly.
 ::
 
@@ -88,7 +85,7 @@ export default defineNuxtConfig({
       enabled: true,
       gitInfo: {
         name: 'Your repository name',
-        owner: 'Your eepository owner/organization',
+        owner: 'Your repository owner/organization',
         url: 'Your GitHub repository URL'    
       }
     }
@@ -96,4 +93,4 @@ export default defineNuxtConfig({
 })
 ```
 
-3. By ensuring these fields are correctly set, you can resolve the `Forbidden error` and successfully enable your site preview on Nuxt Studio. If not, please contact us on the [Discord server]().
+3. By ensuring these fields are correctly set, you can resolve the `Forbidden error` and successfully enable your site preview on Nuxt Studio. If not, please contact us on the [Discord server](https://discord.gg/sBXDm6e8SP).
