--- a/docs/content/docs/7.studio/4.medias.md
+++ b/docs/content/docs/7.studio/4.medias.md
@@ -3,14 +3,14 @@ title: Manage and integrate Medias in Nuxt Content Studio CMS
 navigation:
   title: Medias
 description: Explore how to browse and manage media files, and integrate them into your projects using Nuxt Content Studio CMS features.
-icon: i-ph-image
 ---
 
-![Media gallery on Studio](/assets/docs/editors/EditorsMedias.webp)
 
 ## Browse your medias
 
-All medias located in the `/public` directory are available in the **Media** tab of the content editor.
+All medias located in the `/public` directory are available in the **Media** tab of the Studio platform.
+
+![Media gallery on Studio](/docs/studio/editors-medias.webp)
 
 It's an intuitive interface for non technical users to manage their `/public` directory.
 
