--- a/docs/content/docs/7.studio/5.config.md
+++ b/docs/content/docs/7.studio/5.config.md
@@ -1,14 +1,13 @@
 ---
-title: Tailor data edition in Nuxt Content Studio CMS
+title: Tailor application configuration edition 
+description: Discover how to customize application config edition in Studio by providing schema. Ensure a smooth and structured content management experience.
 navigation:
-  title: Data
-description: Discover how to customize application config edition in Nuxt Studio by providing schema, ensuring a smooth and structured content management experience.
-icon: i-ph-gear-six
+  title: App Config
+seo:
+  title: Tailor data edition in Nuxt Content Studio CMS
 ---
 
-![Customize data interface as a developer](/assets/docs/developers/DevelopersData.webp)
-
-When entering the **Data** tab of the editor, you can browse configurations to customize your website. These configurations represent the settings defined in your `app.config.ts` file.
+When entering the **Config** tab of the editor, you can browse configurations to customize your website. These configurations represent the settings defined in your `app.config.ts` file.
 
 ## `app.config.ts`
 
@@ -16,21 +15,13 @@ The [`app.config.ts`](https://nuxt.com/docs/guide/directory-structure/app-config
 
 Ensure you have at least an empty file in your app:
 
-```js [app.config.ts]
+```ts [app.config.ts]
 export default defineAppConfig({})
 ```
 
-## Customize data edition
-
-### 1. Provide the schema
-
-![nuxt schema config code](/assets/home/slider/home-data-code-dark.webp)
+## Customize edition
 
 To create a customized editing experience for your `app.config.ts` in Studio, you need to create a `nuxt.schema.ts` file in your project. This schema serves as a representation of your `app.config.ts`.
-
-::callout{icon="i-ph-lightbulb"}
-It is not mandatory to include all app config keys; only those you wish to showcase on the Studio interface need to be added.
-::
 
 #### Helpers
 
@@ -59,6 +50,10 @@ export default defineNuxtSchema({
   }
 })
 ```
+
+::tip
+It is not mandatory to include all app config keys; only those you wish to showcase on the Studio interface need to be added.
+::
 
 #### Input Types
 
@@ -100,23 +95,61 @@ export default defineNuxtSchema({
 })
 ```
 
-### 2. Edit on Studio
 
-Once your schema is deployed. Any user can access the **Data** section and play with the generated form.
 
-![app config UI on Studio](/assets/home/slider/home-data-studio-dark.webp)
+### Edit on Studio
+
+Once your schema is deployed. Any user can access the **Config** section and play with the generated form.
 
 Any update in the form will be directly applied to the `app.config.ts` file. You can review those changes on the review page.
 
-::callout{icon="i-ph-wrench" to="/docs/advanced/debug"}
+::code-group
+:::preview-card{label="Preview" icon="i-lucide-eye"}
+![app config UI on Studio](/docs/studio/home-data-studio-dark.webp)  
+:::
+
+```ts [nuxt.schema.ts]
+export default defineNuxtSchema({
+  ui: group({
+    title: 'UI',
+    description: 'UI Customization.',
+    icon: 'i-mdi-palette-outline',
+    fields: {
+      primary: field({
+        type: 'string',
+        title: 'Primary',
+        description: 'Primary color of your UI.',
+        icon: 'i-mdi-palette-outline',
+        required: ['sky', 'mint', 'rose', 'amber', 'violet', 'emerald', 'fuchsia', '...']
+      }),
+      gray: field({ ... }),
+      icons: group({
+        title: 'Icons',
+        description: 'Manage icons used in UI Pro.',
+        icon: 'i-mdi-application-settings-outline',
+        fields: {
+          search: field({ ...}),
+          dark: field({ ... }),
+          light: field({ ... }),
+          external: field({ ...}),
+          chevron: field({ ... }),
+          hash: field({ ... })
+        }
+      })
+    }
+  })
+})
+```
+::
+
+::tip{to="/docs/advanced/debug"}
 Take a look at this section to validate your schema in local development.
 ::
 
-::callout
----
-icon: i-ph-lightbulb
-target: _blank
-to: https://github.com/nuxt-ui-pro/docs/blob/main/nuxt.schema.ts
----
+::tip{to="https://github.com/nuxt-ui-pro/docs/blob/main/nuxt.schema.ts"}
 For a practical example, take a look at the schema we've developed for the UI Pro Docs starter.
 ::
+
+
+
+
