--- a/docs/content/docs/7.studio/2.syncronization.md
+++ b/docs/content/docs/7.studio/2.syncronization.md
@@ -1,20 +1,17 @@
 ---
 title: Allow real time synchronization between Studio and GitHub
+description: Nuxt Studio is natively synced with GitHub. Install the Nuxt Studio GitHub app and enable content publication on GitHub directly from Studio.
 navigation:
   title: Synchronization
-description: Learn how to sync Nuxt Studio with GitHub by installing the Nuxt Studio GitHub app, enabling seamless content publishing directly from Studio.
-icon: i-simple-icons-github
 ---
 
-![studio and github icons syncronized](/assets/docs/advanced/AdvancedGitHub.webp)
+::tip
+This section explains the syncronization behaviour between Studio and GitHub. However this process is handled directly from the platform and do not require any external action. This page purpose is purely informational. 
+::
 
 ## Overview
 
-Nuxt Studio seamlessly integrates with the [GitHub](https://github.com) API, enabling smooth synchronization between Studio and your GitHub repositories. This first-class integration is made possible through the utilization of [GitHub Apps](https://docs.github.com/en/developers/apps/getting-started-with-apps/about-apps#about-github-apps).
-
-::callout{icon="i-ph-lightbulb"}
-It's important to note that **ownership in Studio and ownership in GitHub are separated**. In your Studio personal account, you can import repositories from other GitHub organizations as long as you have the corresponding GitHub rights. Similarly, in a Studio team several members could import different repositories from their personal GitHub account.
-::
+Nuxt Studio integrates with the [GitHub](https://github.com) API, enabling smooth synchronization between Studio and your GitHub repositories. This first-class integration is made possible through the utilization of [GitHub Apps](https://docs.github.com/en/developers/apps/getting-started-with-apps/about-apps#about-github-apps).
 
 ## Installation
 
@@ -28,8 +25,6 @@ During the installation of our GitHub app, you will be prompted to grant certain
 
 - Read access to `actions`, `metadata`, `members`, and `plan`
 - Read and write access to `secrets`, `administration`, `contents`, `pages`, `pull requests` and `workflows`
-
-These permissions are required to provide a seamless experience when working with your repositories.
 
 We need read access to `actions` to send a notification when a workflow run fails on a pull request or on the repository default branch. `metadata` is mandatory to fetch repository data, `members` to import your organization members and repository collaborators and `plan` is used to propose features based on your GitHub account plan.
 
