--- a/docs/content/docs/7.studio/1.setup.md
+++ b/docs/content/docs/7.studio/1.setup.md
@@ -18,7 +18,7 @@ Developers can customize the edition experience and provide tools to the editor 
 
 ## Authentication
 
-The Studio admin is located on [studio.content.nuxt.com](https//studio.content.nuxt.com). From there you can either login with GitHub or with Google. Both methods give you the same edition rights but since Studio is [synchronized with GitHub](/docs/studio/github), the repository import must be handled by a GitHub user.
+The Studio admin is located on [studio.content.nuxt.com](https//nuxt.studio). From there you can either login with GitHub or with Google. Both methods give you the same edition rights but since Studio is [synchronized with GitHub](/docs/studio/github), the repository import must be handled by a GitHub user.
 
 ::warning
 Google authentication is adapted for non technical users. Google users have to join a team with existing projects to edit them.
